--- a/src/Themes/global.css
+++ b/src/Themes/global.css
@@ -17,14 +17,45 @@
   /* max-height: 100vh;
   max-width: 100vw; */
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.full-container-OFsafe {
+  margin: 60px 60px 150px 120px;
+  padding-left: 3vw;
+  padding-top: 2vh;
+  word-wrap: break-word;
+  /* max-height: 100vh;
+  max-width: 100vw; */
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.full-container-grid {
+  margin: 160px 160px 130px 120px;
+  padding-left: 3vw;
+  padding-top: 2vh;
+  word-wrap: break-word;
+  /* max-height: 100vh;
+  max-width: 100vw; */
+  display: flex;
+  justify-content: center;
   overflow: hidden;
 }
 
 @media only screen and (max-width: 600px) {
-  .full-container-1,
-  .full-container-2 {
-    margin: 60px 60px 30px 30px;
+  .full-container-1 {
+    margin: 60px 60px 60px 30px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .full-container-2,
+  .full-container-OFsafe,
+  .full-container-grid {
+    margin: 130px 60px 120px 30px;
   }
 }
 
